testsuite/tests/parse-errors/unclosed_simple_pattern.compilers.reference
Line 7, characters 0-2:
  ;;
  ^^
Error: Syntax error: ')' expected
       Line 6, characters 9-10:
           | List.(_
                  ^
       This '(' might be unmatched
Line 4, characters 0-2:
  ;;
  ^^
Error: Syntax error: ')' expected
       Line 3, characters 4-5:
           | (_
             ^
       This '(' might be unmatched
Line 4, characters 0-2:
  ;;
  ^^
Error: Syntax error: ')' expected
       Line 3, characters 4-5:
           | (_ : int
             ^
       This '(' might be unmatched
Line 7, characters 0-2:
  ;;
  ^^
Error: Syntax error: module-expr expected.
Line 7, characters 0-2:
  ;;
  ^^
Error: Syntax error
Line 4, characters 0-2:
  ;;
  ^^
Error: Syntax error
Line 4, characters 0-2:
  ;;
  ^^
Error: Syntax error

